created carousel slider js

--- a/style.css
+++ b/style.css
@@ -6,22 +6,45 @@
 
 body {
 	font-family: Verdana, sans-serif;
-	margin: 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-flow: column;
+	background-color: #404040;
+	width: 100vw;
+	height: 100vh;
 }
 
 .mySlides {
+	width: 90%;
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-flow: column;
 	display: none;
 }
 
 img {
 	vertical-align: middle;
+	border-radius: 12px;
+	height: 90%;
+	object-fit: cover;
 }
 
 /* Slideshow container */
 .slideshow-container {
-	max-width: 100vw;
+	width: 100vw;
+	height: 75vh;
 	position: relative;
 	margin: auto;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.dots {
+	position: absolute;
+	bottom: 2rem;
 }
 
 /* Next & previous buttons */
@@ -35,16 +58,18 @@ img {
 	margin-top: -22px;
 	color: white;
 	font-weight: bold;
-	font-size: 18px;
+	font-size: 1.5rem;
 	transition: 0.3s ease-in-out;
-	border-radius: 0 3px 3px 0;
+	border-radius: 0 500px 500px 0;
 	user-select: none;
 }
 
-/* Position the "next button" to the right */
+.prev {
+	left: 0;
+}
 .next {
 	right: 0;
-	border-radius: 3px 0 0 3px;
+	border-radius: 500px 0 0 500px;
 }
 
 /* On hover, add a black background color with a little bit see-through */
@@ -58,8 +83,6 @@ img {
 	color: #f2f2f2;
 	font-size: 15px;
 	padding: 8px 12px;
-	position: absolute;
-	bottom: 8px;
 	width: 100%;
 	text-align: center;
 }
